update article api
